# modularhistory

./: .dockerignore  .gcloudignore  .gitattributes  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pyre_configuration  .python-version  CODEOWNERS  Dockerfile  Dockerfile.backend  Dockerfile.django  Dockerfile.frontend  Dockerfile.react  Dockerfile.webserver  LICENSE.txt  README.md  README.rst  SECURITY.md  admin.py  app.yaml  clean_data.py  conftest.py  data.json  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  env.yaml  fix_imports.sh  fix_six_imports.sh  gc_app.yaml  gc_env.yaml  init-letsencrypt.sh  init.sh  initialize_db.py  main.py  manage.py  monkeypatch.py  nginx.conf  (+11 more)
.config/: .env.test  _.env  _.env.dev  _.env.prod  _.env.test  ddclient.conf  env.dev.yaml  env.yaml  hosts.txt
.config/entrypoints/: celery  celery_beat  django  setup
.config/hooks/: post-merge  pre-commit  pre-push
.config/init/: celery.sh  django.sh  flower.sh
.config/nginx/: routes.conf  settings.conf
.config/rclone/: filters.txt  rclone.conf
.config/scripts/: deploy.sh  functions.sh  install-deps.sh  setup.sh
.github/: FUNDING.yml  SECURITY.md  dependabot.yml  labeler.yml  preprocess.sh
.github/actions/: setup.yml  test.yml
.github/tmp/: cleanup.yml  delivery.yml  integration.yml  seed.yml
.github/workflows/: cd.yml  ci.yml  ci_cd.yml  cleanup.yml  codeql-analysis.yml  delivery.yml  deploytoContainerWebApp.yml  django.yml  django_cd.yml  django_ci.yml  django_ci_cd.yml  integration.yml  seed.yml  setup.yml
.github/workflows-src/: cleanup.yml  delivery.yml  integration.yml  seed.yml
account/: admin.py  apps.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
account/migrations/: 0001_initial.py  0001_squashed_0011_auto_20200926_1058.py  0002_auto_20200306_0712.py  0002_auto_20201016_0550.py  0004_auto_20200306_1036.py  0005_auto_20200316_1704.py  0006_auto_20200807_0235.py  0007_auto_20200812_0626.py  0008_auto_20200822_0855.py  0009_auto_20200825_1135.py  0010_auto_20200831_0504.py  0010_auto_20200926_1052.py  0011_auto_20200831_0958.py  0011_auto_20200926_1058.py  0012_auto_20201016_0723.py
account/old_views/: profile.py  settings.py
account/scripts/: login_ajax.js  receipt.js  refund.js  register.js
account/social_auth/: __init__.py  auth_data.py  avatar.py  email.py
account/styles/: base.css  cart.css  profile.css  receipt.css  refund.css
account/templates/: base.htm  (+13 more)
admin/: __init__.py  admin.py  admin_menu.py  admin_site.py  autocomplete_filter.py  inlines.py  model_admin.py  searchable_model_admin.py  tests.py
backend/: Dockerfile.backend  Dockerfile.django  manage.py  pyproject.toml  setup.cfg
chat/: apps.py  consumers.py  routing.py  urls.py  views.py
client/: package-lock.json  package.json  vue.config.js
commands/: db.py  media.py  qa.py  search_utils.py  setup.py  tasks.py
config/: ddclient.conf  debug_toolbar.py  deploy.sh  env.dev.yaml  env.test.yaml  env.yaml  hosts  hosts.txt  invoke.yaml
core/: __init__.py  asgi.py  celery.py  environment.py  errors.py  factories.py  forms.py  middleware.py  pagination.py  sentry.py  settings.py  signals.py  sitemap.py  tasks.py  tests.py  urls.py  views.py  wsgi.py
dates/: admin.py  apps.py  models.py
entities/: admin.py  apps.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
facts/: admin.py  apps.py  urls.py  views.py
frontend/: .eslintignore  .eslintrc.js  .eslintrc.json  .prettierignore  Dockerfile.frontend  Dockerfile.next  __init__.py  apps.py  auth.ts  auth.tsx  authAxios.ts  axios.ts  axiosWithAuth.ts  axiosWithoutAuth.ts  babel.config.js  cypress.json  interfaces.d.ts  jest.config.js  jest.setup.js  next-env.d.ts  next.config.js  package-lock.json  package.json  sentry.base.config.ts  sentry.client.config.js  sentry.client.config.ts  sentry.js  sentry.properties  sentry.server.config.js  sentry.server.config.ts  tests.py  tsconfig.json  views.py  webpack.config.js
history/: __init__.py  admin.py  admin_menu.py  asgi.py  celery.py  checks.py  config.py  constants.py  fields.py  forms.py  models.py  settings.py  signals.py  social_auth.py  storage.py  tasks.py  urls.py  widgets.py  wsgi.py
home/: apps.py  forms.py  tests.py  urls.py  views.py
images/: admin.py  apps.py  manager.py  models.py  serializers.py  tests.py  urls.py  views.py
interactions/: apps.py  models.py  views.py
markup/: apps.py  models.py  views.py
modularhistory/: __init__.py  asgi.py  celery.py  config.py  constants.py  environment.py  environments.py  errors.py  forms.py  middleware.py  pagination.py  routing.py  sentry.py  settings.py  social_auth.py  storage.py  tasks.py  tests.py  urls.py  utils.py  views.py  wsgi.py
occurrences/: admin.py  apps.py  manager.py  models.py  serializers.py  tests.py  urls.py  views.py
people/: admin.py  models.py  tests.py  views.py
places/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
polymorphic/: __init__.py  apps.py  query_translate.py
postulations/: admin.py  apps.py  urls.py  views.py
quotes/: admin.py  admin_filters.py  apps.py  manager.py  models.py  serializers.py  urls.py  views.py
search/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
sources/: 0001_squashed_0064_source_computations.py  admin.py  apps.py  list_filters.py  manager.py  models.py  serializers.py  tests.py  urls.py  views.py
staticpages/: admin.py  apps.py  middleware.py  models.py  tests.py  views.py
supervisor/: celery.conf  celerybeat.conf
tasks/: __init__.py  command.py  db.py  ddns.py  media.py  qa.py  scm.py  search_utils.py  seeding.py  setup.py  tasks.py
templates/: 404.html  500.html  _card.html  _footer.html  _meta.html  _modal.html  _navbar.html  _paginator.html  base-vue.html  base.htm  base.html  error.htm  error.html  list.html  privacy.html  search_results.html  terms.html
topics/: admin.py  apps.py  models.py  serializers.py  topics.txt  urls.py  views.py
verification/: apps.py  models.py
verifications/: apps.py  models.py
(+3060 files in other folders)
